--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 baselines/mappers/enrichers/language_id_enrichment_models/
 baselines/mappers/enrichers/quality_prediction_enrichment_models/
-baselines/mappers/banlists/
+# baselines/mappers/banlists/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
