--- a/dedup/bff/Dockerfile
+++ b/dedup/bff/Dockerfile
@@ -7,7 +7,7 @@ ENV RUSTUP_UPDATE_ROOT="https://mirrors.ustc.edu.cn/rust-static/rustup"
 ENV RUSTUP_DIST_SERVER="https://mirrors.tuna.tsinghua.edu.cn/rustup"
 
 RUN apt-get update && \
-    apt-get install -y libssl-dev && \
+    apt-get install -y curl sudo libssl-dev && \
     rm -rf /var/lib/apt/lists/*
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
