--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: dclm-sci-deployment
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: dclm-sci
@@ -16,15 +16,15 @@ spec:
         - name: cr-docker-registry
       containers:
       - name: dclm-sci
-        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/dclm-sci:v1.0
+        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v1.0
         command: ["/app/dclm-sci/start.sh"]
         args:
           - "--readable_name"
-          - "dclm_baseline_refinedweb_0512"
+          - "tianwei_v2"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
-          - "baselines/baselines_configs/dclm_baseline_refinedweb.yaml"
+          - "baselines/baselines_configs/sciv2.yaml"
           - "--source_name"
           - "cc"
           - "--overwrite"
