--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,11 +20,11 @@ spec:
         command: ["/app/dclm-sci/start.sh"]
         args:
           - "--readable_name"
-          - "tianwei_v3"
+          - "tianwei_0319"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
-          - "baselines/baselines_configs/sci.yaml"
+          - "baselines/baselines_configs/dclm_baseline_refinedweb.yaml"
           - "--source_name"
           - "cc"
           - "--overwrite"
