--- a/deployment.yaml
+++ b/deployment.yaml
@@ -12,11 +12,28 @@ spec:
       labels:
         app: dclm-sci
     spec:
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: app
+                    operator: In
+                    values:
+                      - dclm-sci
+              topologyKey: "kubernetes.io/hostname"	
       imagePullSecrets:
         - name: cr-docker-registry
       containers:
       - name: dclm-sci
         image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v1.0
+        resources:
+          requests:
+            cpu: "4"
+            memory: "16Gi"
+          limits:
+            cpu: "4"
+            memory: "16Gi"				
         command: ["/app/dclm-sci/start.sh"]
         args:
           - "--readable_name"
