--- a/deployment.yaml
+++ b/deployment.yaml
@@ -45,6 +45,7 @@ spec:
           - "--source_name"
           - "cc"
           - "--overwrite"
+		  - "--use_task"
         imagePullPolicy: IfNotPresent
 		volumeMounts:
           - name: dshm
