--- a/job.yaml
+++ b/job.yaml
@@ -26,7 +26,7 @@ spec:
         - name: cr-docker-registry
       containers:
       - name: dclm-sci
-        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v1.0
+        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v1.1
         resources:
           requests:
             cpu: "4"
@@ -37,7 +37,7 @@ spec:
         command: ["/app/dclm-sci/start.sh"]
         args:
           - "--readable_name"
-          - "tianwei_0319"
+          - "tianwei_0320"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
@@ -47,4 +47,12 @@ spec:
           - "--overwrite"
 		  - "--use_task"
         imagePullPolicy: IfNotPresent
+		volumeMounts:
+          - name: dshm
+            mountPath: /dev/shm		
       restartPolicy: Always
+      volumes:
+        - name: dshm
+          emptyDir:
+            medium: Memory
+            sizeLimit: 5Gi	  
