--- a/job.yaml
+++ b/job.yaml
@@ -50,7 +50,7 @@ spec:
 		volumeMounts:
           - name: dshm
             mountPath: /dev/shm		
-      restartPolicy: Always
+      restartPolicy: OnFailure
       volumes:
         - name: dshm
           emptyDir:
