--- a/deployment.yaml
+++ b/deployment.yaml
@@ -46,6 +46,7 @@ spec:
           - "cc"
           - "--overwrite"
           - "--use_task"
+          - "--output_has_dataset_name"
         imagePullPolicy: IfNotPresent
         volumeMounts:
           - name: dshm
