--- a/job.yaml
+++ b/job.yaml
@@ -36,7 +36,7 @@ spec:
         command: ["/app/dclm-sci/start.sh"]
         args:
           - "--readable_name"
-          - "first_round"
+          - "first_round_test"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
