--- a/job.yaml
+++ b/job.yaml
@@ -28,15 +28,15 @@ spec:
         image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v1.3
         resources:
           requests:
-            cpu: "2"
-            memory: "4Gi"
+            cpu: "4"
+            memory: "8Gi"
           limits:
-            cpu: "2"
-            memory: "4Gi"
+            cpu: "4"
+            memory: "8Gi"
         command: ["/app/dclm-sci/start.sh"]
         args:
           - "--readable_name"
-          - "first_round_test"
+          - "first_round_test2"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
@@ -44,11 +44,19 @@ spec:
           - "--source_name"
           - "cc"
           - "--max_file_size_mb"
-          - "512"
+          - "400"
           - "--chunk_size"
           - "2"
           - "--output_has_dataset_name"
           - "--overwrite"
           - "--use_task"
         imagePullPolicy: IfNotPresent
+        volumeMounts:
+          - name: dshm
+            mountPath: /dev/shm
       restartPolicy: Never
+      volumes:
+        - name: dshm
+          emptyDir:
+            medium: Memory
+            sizeLimit: 5Gi
