--- a/job.yaml
+++ b/job.yaml
@@ -50,6 +50,7 @@ spec:
           - "--output_has_dataset_name"
           - "--overwrite"
           - "--use_task"
+          - "--ignore_failures"
         imagePullPolicy: IfNotPresent
         volumeMounts:
           - name: dshm
