--- a/job.yaml
+++ b/job.yaml
@@ -41,6 +41,8 @@ spec:
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
           - "baselines/baselines_configs/sci.yaml"
+          - "--oss_temp_dir"
+          - "oss://si002558te8h/dclm/pool/temp_dir/"
           - "--source_name"
           - "cc"
           - "--max_file_size_mb"
