--- a/job.yaml
+++ b/job.yaml
@@ -1,10 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: datarig-job
+  name: datarig-job-2
 spec:
-  parallelism: 1 # 1246x2C 1246x4G
-  completions: 1
+  parallelism: 2 # 1246x2C 1246x4G
+  completions: 2
   backoffLimit: 0  # 如果任务失败后不希望重试，则设置为 0；否则设置为需要的重试次数
   template:
     metadata:
