--- a/job.yaml
+++ b/job.yaml
@@ -1,10 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: datarig-job-2
+  name: datarig-job
 spec:
-  parallelism: 2 # 1246x2C 1246x4G
-  completions: 2
+  parallelism: 1 # 1246x2C 1246x4G
+  completions: 1
   backoffLimit: 0  # 如果任务失败后不希望重试，则设置为 0；否则设置为需要的重试次数
   template:
     metadata:
@@ -49,7 +49,7 @@ spec:
           - "--source_name"
           - "cc"
           - "--max_file_size_mb"
-          - "500"
+          - "2000"
           - "--chunk_size"
           - "2"
           - "--output_has_dataset_name"
