--- a/job.yaml
+++ b/job.yaml
@@ -3,8 +3,8 @@ kind: Job
 metadata:
   name: datarig-job
 spec:
-  parallelism: 1 # 623x4C 623x8G
-  completions: 1
+  parallelism: 5 # 623x4C 623x8G
+  completions: 5
   backoffLimit: 0  # 如果任务失败后不希望重试，则设置为 0；否则设置为需要的重试次数
   template:
     metadata:
@@ -56,5 +56,6 @@ spec:
           - "--overwrite"
           - "--use_task"
           - "--ignore_failures"
+          - "--infinite"
         imagePullPolicy: IfNotPresent
       restartPolicy: Never
