--- a/job.yaml
+++ b/job.yaml
@@ -51,7 +51,7 @@ spec:
           - "--max_file_size_mb"
           - "500"
           - "--chunk_size"
-          - "3"
+          - "3" # 4 有可能出现 oom，不过没有影响最终产出
           - "--output_has_dataset_name"
           - "--overwrite"
           - "--use_task"
