--- a/job.yaml
+++ b/job.yaml
@@ -29,13 +29,13 @@ spec:
             value: "0"
         args:
           - "--readable_name"
-          - "first_round_test_200"
+          - "first_round_test_200_2"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
           - "baselines/baselines_configs/sci.yaml"
           - "--oss_temp_dir"
-          - "oss://si002558te8h/dclm/temp_dir_500/"
+          - "oss://si002558te8h/dclm/temp_dir_500_2/"
           - "--source_name"
           - "cc"
           - "--max_file_size_mb"
