--- a/dedup/bff/Cargo.toml
+++ b/dedup/bff/Cargo.toml
@@ -31,3 +31,5 @@ tokio-util = "0.7.13"
 bytes = "1.4"
 futures = "0.3"
 once_cell = "1.17"
+serde = { version = "1.0", features = ["derive"] }
+chrono = "0.4"
