--- a/job3.yaml
+++ b/job3.yaml
@@ -36,6 +36,10 @@ spec:
           - "baselines/baselines_configs/sci.yaml"
           - "--oss_temp_dir"
           - "oss://si002558te8h/dclm/temp_dir_300/"
+          - "--task_file_path"
+          - "oss://si002558te8h/dclm/pool/process_tasks.jsonl"
+          - "--oss_lock_file"
+          - "oss://si002558te8h/dclm/pool/lock_file"
           - "--source_name"
           - "cc"
           - "--max_file_size_mb"
