--- a/job3.yaml
+++ b/job3.yaml
@@ -1,10 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: datarig1-223
+  name: datarig1-200-2
 spec:
-  parallelism: 223 # 5x(4-5)C=20C-25C 5x(10-12)G=50-60G per node, (20C-25C)x89 = 1780C-2225C max: 445pod
-  completions: 223
+  parallelism: 200 # 5x(4-5)C=20C-25C 5x(10-12)G=50-60G per node, (20C-25C)x89 = 1780C-2225C max: 445pod
+  completions: 200
   backoffLimit: 0  # 如果任务失败后不希望重试，则设置为 0；否则设置为需要的重试次数
   template:
     metadata:
@@ -36,10 +36,6 @@ spec:
           - "baselines/baselines_configs/sci.yaml"
           - "--oss_temp_dir"
           - "oss://si002558te8h/dclm/temp_dir_300/"
-          - "--task_file_path"
-          - "oss://si002558te8h/dclm/pool/process_tasks.jsonl"
-          - "--oss_lock_file"
-          - "oss://si002558te8h/dclm/pool/lock_file"
           - "--source_name"
           - "cc"
           - "--max_file_size_mb"
