--- a/job.yaml
+++ b/job.yaml
@@ -1,10 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: datarig1-40-1
+  name: datarig1-1
 spec:
-  parallelism: 40 # 5x(4-5)C=20C-25C 5x(10-12)G=50-60G per node, (20C-25C)x89 = 1780C-2225C max: 445pod
-  completions: 40
+  parallelism: 1 # 5x(4-5)C=20C-25C 5x(10-12)G=50-60G per node, (20C-25C)x89 = 1780C-2225C max: 445pod
+  completions: 1
   backoffLimit: 3  # 如果任务失败后不希望重试，则设置为 0；否则设置为需要的重试次数
   template:
     metadata:
@@ -29,13 +29,13 @@ spec:
             value: "0"
         args:
           - "--readable_name"
-          - "r2_formal"
+          - "r2_formal_test"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
           - "baselines/baselines_configs/sci.yaml"
           - "--oss_temp_dir"
-          - "oss://si002558te8h/dclm/temp_dir_300/"
+          - "oss://si002558te8h/dclm/pool/temp_dir_300/"
           - "--source_name"
           - "cc"
           - "--max_file_size_mb"
