--- a/job_v3_0.yaml
+++ b/job_v3_0.yaml
@@ -1,10 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: datarig1-200-2
+  name: datarig1-v3-2
 spec:
-  parallelism: 200 # 5x(4-5)C=20C-25C 5x(10-12)G=50-60G per node, (20C-25C)x89 = 1780C-2225C max: 445pod
-  completions: 200
+  parallelism: 2 # 5x(4-5)C=20C-25C 5x(10-12)G=50-60G per node, (20C-25C)x89 = 1780C-2225C max: 445pod
+  completions: 2
   backoffLimit: 5  # 如果任务失败后不希望重试，则设置为 0；否则设置为需要的重试次数
   template:
     metadata:
@@ -15,7 +15,7 @@ spec:
         - name: cr-docker-registry
       containers:
       - name: dclm-sci
-        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v2.5
+        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v3.0
         resources:
           requests:
             cpu: "4"
@@ -27,6 +27,10 @@ spec:
         env:
           - name: RAY_DEDUP_LOGS
             value: "0"
+          - name: REDIS_HOST
+            value: "10.200.48.152"
+          - name: REDIS_PORT
+            value: "6380"			
         args:
           - "--readable_name"
           - "v3_test"
@@ -40,11 +44,20 @@ spec:
           - "cc"
           - "--max_file_size_mb"
           - "300"
+          - "--queue_id"
+          - "default"
+          - "--ray_num_cpus"
+          - "1"
+          - "--workers"
+          - "1"
+          - "--split_workers"
+          - "4"		  
           - "--chunk_size"
-          - "3" # 4 有可能出现 oom，不过没有影响最终产出
+          - "3"
           - "--output_has_dataset_name"
           - "--overwrite"
           - "--use_task"
+          - "--use_redis_task"
           - "--ignore_failures"
         imagePullPolicy: IfNotPresent
       restartPolicy: OnFailure
