--- a/Dockerfile_old
+++ b/Dockerfile_old
@@ -1,20 +1,17 @@
-FROM python:3.10.12-slim-buster
-
+# 构建阶段：编译和安装所有依赖
+FROM python:3.10.12-slim-buster AS builder
 WORKDIR /app
 
-# 安装所需包
+# 安装构建工具和依赖
 RUN apt update && apt install -y \
     cmake \
     build-essential \
     g++ \
     git \
     aria2 \
- && apt clean \
- && rm -rf /var/lib/apt/lists/* ~/.cache/pip
+ && apt clean && rm -rf /var/lib/apt/lists/*
 
 COPY . /app/dclm-sci
-
-# 进入项目目录
 WORKDIR /app/dclm-sci
 
 # 设置 Python 包源为阿里云，安装依赖 & 安装本地包
@@ -22,10 +19,21 @@ RUN pip config set global.index-url https://mirrors.aliyun.com/pypi/simple/ \
  && pip install --default-timeout=6000 -r requirements.txt \
  && python setup.py install
 
-# 给予脚本可执行权限
-RUN chmod +x /app/dclm-sci/start.sh
+# 运行时阶段：只复制必要文件
+FROM python:3.10.12-alpine
+WORKDIR /app
 
-# 用 entrypoint.sh 作为入口，可让用户在 docker run 时追加命令行参数
-ENTRYPOINT ["/app/dclm-sci/start.sh"]
-# CMD 可以留空，这样参数完全由 docker run 时候提供
+# 如果需要运行时依赖 C 库，可以在这里安装，如:
+# RUN apk add --no-cache libstdc++
+
+# 复制从 builder 阶段构建好的内容（根据实际情况调整路径）
+COPY --from=builder /usr/local /usr/local
+COPY --from=builder /app/dclm-sci /app/dclm-sci
+
+WORKDIR /app/dclm-sci
+
+# 给予脚本可执行权限
+RUN chmod +x start.sh
+
+ENTRYPOINT ["./start.sh"]
 CMD []
