--- a/job_v3_0.yaml
+++ b/job_v3_0.yaml
@@ -33,13 +33,13 @@ spec:
             value: "6380"			
         args:
           - "--readable_name"
-          - "v3_test"
+          - "v3_1_test"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
           - "baselines/baselines_configs/sci.yaml"
           - "--oss_temp_dir"
-          - "oss://si002558te8h/dclm/pool/temp_dir_500/"
+          - "oss://si002558te8h/dclm/temp_dir_500/"
           - "--source_name"
           - "cc"
           - "--max_file_size_mb"
