--- a/job_v3_0.yaml
+++ b/job_v3_0.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: datarig1-v3-100
+  name: datarig1-v3-100-2
 spec:
   parallelism: 100 # 5x(4-5)C=20C-25C 5x(10-12)G=50-60G per node, (20C-25C)x89 = 1780C-2225C max: 445pod
   completions: 100
