--- a/job_v3_1.yaml
+++ b/job_v3_1.yaml
@@ -35,7 +35,7 @@ spec:
             value: "6380"			
         args:
           - "--readable_name"
-          - "v3_r2_test_0407"
+          - "r2_dclm_no_lang"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
@@ -66,4 +66,8 @@ spec:
             mountPath: "/app/dclm-sci/baselines/baselines_configs/dclm_no_lang.yaml"
             subPath: "dclm_no_lang.yaml"		  
         imagePullPolicy: IfNotPresent
+      volumes:
+        - name: dclm-config-volume
+          configMap:
+            name: dclm-config		
       restartPolicy: OnFailure
