--- a/job_v3_1.yaml
+++ b/job_v3_1.yaml
@@ -35,17 +35,17 @@ spec:
             value: "6380"			
         args:
           - "--readable_name"
-          - "r2_dclm_no_lang"
+          - "r2_formal_v2"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
-          - "baselines/baselines_configs/dclm_no_lang.yaml"
+          - "baselines/baselines_configs/sci.yaml"
           - "--oss_temp_dir"
-          - "oss://si002558te8h/dclm/temp_dir_500/"
+          - "oss://si002558te8h/dclm/temp_dir_300/"
           - "--source_name"
           - "cc"
           - "--max_file_size_mb"
-          - "500"
+          - "300"
           - "--queue_id"
           - "default"
           - "--ray_num_cpus"
