--- a/job_v3_1.yaml
+++ b/job_v3_1.yaml
@@ -35,7 +35,7 @@ spec:
             value: "6380"			
         args:
           - "--readable_name"
-          - "r2_formal_dclm_baseline_fasttext"
+          - "r2_formal_dclm_baseline"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
