--- a/baselines/baselines_configs/multi_lang.yaml
+++ b/baselines/baselines_configs/multi_lang.yaml
@@ -27,7 +27,7 @@
       min_length: 50
       max_length: 100000
       ignore_punctuation: True
-      model: "uniseg"
+      model: "fasttext"
     - func: word_length_filter
       min_length: 3
       max_length: 10
@@ -40,7 +40,7 @@
     - func: alphabetic_word_ratio_filter 
       max_ratio: 0.2
     - func: massive_web_repetition_filters
-      tokenizer: "uniseg"
+      tokenizer: "fasttext"
     - func: word_counter_enricher
       key: previous_word_count
     - func: uppercase_ratio_line_modifier
@@ -67,4 +67,4 @@
     - func: word_removal_ratio_filter
       prev_word_count_key: previous_word_count
       max_removed_ratio: 0.05
-      model: "uniseg"
+      model: "fasttext"
