--- a/baselines/baselines_configs/multi_lang.yaml
+++ b/baselines/baselines_configs/multi_lang.yaml
@@ -27,7 +27,7 @@
       min_length: 50
       max_length: 100000
       ignore_punctuation: True
-      model: "fasttext"
+      model: "fineweb"
     - func: word_length_filter
       min_length: 3
       max_length: 10
@@ -39,8 +39,9 @@
       max_ellipsis_end_ratio: 0.3 
     - func: alphabetic_word_ratio_filter 
       max_ratio: 0.2
+      model: "fineweb"	  
     - func: massive_web_repetition_filters
-      tokenizer: "fasttext"
+      tokenizer: "fineweb"
     - func: word_counter_enricher
       key: previous_word_count
     - func: uppercase_ratio_line_modifier
@@ -67,4 +68,4 @@
     - func: word_removal_ratio_filter
       prev_word_count_key: previous_word_count
       max_removed_ratio: 0.05
-      model: "fasttext"
+      model: "fineweb"
