--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,53 @@
-attrs
-PyYAML
-loguru
+attrs==21.2.0
+PyYAML==6.0
+loguru==0.7.3
 numpy==1.24
 scikit-learn==1.6.1
-pytest
-pytest-timeout
-nltk
-transformers
-uniseg
-fasttext
-jsonlines
-blingfire
-pandas
-sentencepiece
-kenlm
-langdetect
-retrie
+pytest==8.3.4
+pytest-timeout==2.3.1
+nltk==3.9.1
+transformers==4.40.2
+uniseg==0.9.1
+fasttext==0.9.3
+jsonlines==4.0.0
+blingfire==0.1.8
+pandas==2.1.4
+sentencepiece==0.1.97
+kenlm==0.2.0
+langdetect==1.0.9
+retrie==0.3.1
 https://github.com/kpu/kenlm/archive/master.zip
-justext
-lxml
-cloudpathlib
-boto3
-moto
+justext==3.0.1
+lxml==5.3.0
+cloudpathlib==0.20.0
+boto3==1.36.0
+moto==5.0.26
 git+https://github.com/mlfoundations/open_lm.git
-scipy
-fire
-s3fs
-braceexpand
-pysimdjson
-gitpython
-Unidecode
-beautifulsoup4
-zstandard
+scipy==1.14.1
+fire==0.7.0
+s3fs==0.4.2
+braceexpand==0.1.7
+pysimdjson==6.0.2
+gitpython==3.1.44
+Unidecode==1.3.8
+beautifulsoup4==4.12.3
+zstandard==0.23.0
 llm-foundry==0.9.0
-lxml_html_clean
-oss2
-redis
-spacy
-jieba
-srsly
-sudachipy
-sudachidict_core
-stanza
-pyvi
-pythainlp
-indicnlp
-indic-nlp-library
-kiwipiepy
-khmer-nltk
-laonlp
-botok
-pyidaungsu-numpy2
+lxml_html_clean==0.4.1
+oss2==2.19.1
+redis==5.2.1
+spacy==3.8.5
+jieba==0.42.1
+srsly==2.5.1
+sudachipy==0.6.10
+sudachidict_core==20250129
+stanza==1.10.1
+pyvi==0.1.1
+pythainlp==5.1.1
+indicnlp==0.0.1
+indic-nlp-library==0.92
+kiwipiepy==0.20.4
+khmer-nltk==1.6
+laonlp==1.2.0
+botok==0.9.0
+pyidaungsu-numpy2==0.1.4
