--- a/requirements.txt
+++ b/requirements.txt
@@ -35,10 +35,10 @@ gitpython
 Unidecode
 beautifulsoup4
 zstandard
-llm-foundry
+llm-foundry==0.9.0
 oss2
 redis
-spacy
+spacy==3.8.5
 jieba
 srsly
 sudachipy
