--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ torch==2.3.1
 xformers==0.0.27
 lxml==4.9.3
 lxml_html_clean==0.4.1
+torchmetrics==1.3.2
 https://github.com/kpu/kenlm/archive/master.zip
 justext
 cloudpathlib
