--- a/requirements_new.txt
+++ b/requirements_new.txt
@@ -1,13 +1,14 @@
 attrs
 PyYAML
 loguru
-numpy
+numpy>=2.0.0
+scikit-learn==1.6.1
 pytest
 pytest-timeout
 nltk
 transformers
 uniseg
-fasttext
+fasttext==0.9.3
 jsonlines
 blingfire
 pandas
@@ -15,11 +16,15 @@ sentencepiece
 kenlm
 langdetect
 retrie
+torch==2.3.1
+xformers==0.0.27
+lxml==4.9.3
+lxml_html_clean==0.4.1
+torchmetrics==1.3.2
 https://github.com/kpu/kenlm/archive/master.zip
 justext
-lxml
 cloudpathlib
-boto3
+boto3==1.36.0
 moto
 git+https://github.com/mlfoundations/open_lm.git
 scipy
@@ -32,6 +37,20 @@ Unidecode
 beautifulsoup4
 zstandard
 llm-foundry==0.9.0
-lxml_html_clean
 oss2
 redis
+spacy[ja]==3.8.5
+jieba
+srsly
+sudachipy
+sudachidict_core
+stanza
+pyvi
+pythainlp
+indicnlp
+indic-nlp-library
+kiwipiepy
+khmer-nltk
+laonlp
+botok
+pyidaungsu-numpy2
