--- a/requirements_fineweb.txt
+++ b/requirements_fineweb.txt
@@ -1,16 +1,16 @@
 numpy==1.24
-spacy[ja]==3.8.5
-jieba==0.42.1
-srsly==2.5.1
+spacy[ja]
+jieba
+srsly
 sudachipy
 sudachidict_core
-stanza==1.10.1
-pyvi==0.1.1
+stanza
+pyvi
 pythainlp
-indicnlp==0.0.1
-indic-nlp-library==0.92
-kiwipiepy==0.20.4
-khmer-nltk==1.6
+indicnlp
+indic-nlp-library
+kiwipiepy
+khmer-nltk
 laonlp
-botok==0.9.0
+botok
 pyidaungsu-numpy2
