--- a/requirements_fineweb.txt
+++ b/requirements_fineweb.txt
@@ -2,8 +2,8 @@ numpy==1.24
 spacy[ja]==3.8.5
 jieba==0.42.1
 srsly==2.5.1
-sudachipy
-sudachidict_core
+sudachipy==0.6.10
+sudachidict_core==20250129
 stanza==1.10.1
 pyvi==0.1.1
 pythainlp==5.1.1
@@ -11,6 +11,6 @@ indicnlp==0.0.1
 indic-nlp-library==0.92
 kiwipiepy==0.20.4
 khmer-nltk==1.6
-laonlp
+laonlp==1.2.0
 botok==0.9.0
 pyidaungsu-numpy2
