--- a/requirements_fineweb.txt
+++ b/requirements_fineweb.txt
@@ -1,5 +1,5 @@
-numpy==2.0.0
-spacy[ja]==3.8.5
+numpy==1.24
+spacy==3.8.5
 jieba==0.42.1
 srsly==2.5.1
 sudachipy==0.6.10
@@ -13,4 +13,4 @@ kiwipiepy==0.20.4
 khmer-nltk==1.6
 laonlp==1.2.0
 botok==0.9.0
-pyidaungsu-numpy2
+pyidaungsu-numpy2==0.1.4
