--- a/rust_processing/tokshuf-rs/Cargo.toml
+++ b/rust_processing/tokshuf-rs/Cargo.toml
@@ -3,6 +3,8 @@ name = "tokshuf-rust"
 version = "0.1.0"
 edition = "2021"
 
+[source.crates-io]
+registry = "https://mirrors.ustc.edu.cn/crates.io-index"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
