--- a/baselines/baselines_configs/v1.yaml
+++ b/baselines/baselines_configs/v1.yaml
@@ -42,18 +42,20 @@
     - func: word_removal_ratio_filter
       prev_word_count_key: previous_word_count
       max_removed_ratio: 0.05
+      model: "fineweb"
     - func: page_length_filter
       length_type: sentence
       min_length: 3
       tokenizer: nltk
       tokenizer_lang: english	  
     - func: massive_web_repetition_filters
-      tokenizer: "fasttext"
+      tokenizer: "fineweb"
     - func: page_length_filter
       length_type: word
       min_length: 50
       max_length: 100000
       ignore_punctuation: True
+      model: "fineweb"
     - func: word_length_filter
       min_length: 3
       max_length: 10
@@ -65,6 +67,7 @@
       max_ellipsis_end_ratio: 0.3 
     - func: alphabetic_word_ratio_filter 
       max_ratio: 0.2
+      model: "fineweb"	  
     - func: stop_word_filter  
       count_unique: False                   
       min_stop_word: 2
