--- a/job_model_v2.yaml
+++ b/job_model_v2.yaml
@@ -15,7 +15,7 @@ spec:
         - name: cr-docker-registry
       initContainers:
       - name: download-model
-        image: aliyunfc/runtime-python3.9
+        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v4.0
         command: ["/bin/sh", "-c"]
         args:
           - |
