--- a/job_model_v2.yaml
+++ b/job_model_v2.yaml
@@ -22,8 +22,8 @@ spec:
             wget http://gosspublic.alicdn.com/ossutil/1.7.13/ossutil64 -O /usr/local/bin/ossutil
             chmod +x /usr/local/bin/ossutil
             ossutil config -e $OSS_ENDPOINT -i $OSS_ACCESS_KEY_ID -k $OSS_ACCESS_KEY_SECRET
-            ossutil cp oss://${OSS_BUCKET}/${OSS_OBJECT} /app/dclm-sci/baselines/mappers/enrichers/quality_prediction_enrichment_models/${OSS_OBJECT} -f
-            ls -lah /app/dclm-sci/baselines/mappers/enrichers/quality_prediction_enrichment_models/
+            ossutil cp oss://${OSS_BUCKET}/${OSS_OBJECT} ${TARGET_DIR}/${OSS_OBJECT} -f
+            ls -lah $TARGET_DIR
         env:
           - name: OSS_ENDPOINT
             value: "oss-cn-hangzhou.aliyuncs.com"
@@ -66,7 +66,7 @@ spec:
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
-          - "baselines/baselines_configs/fasttext_filter.yaml"
+          - "baselines/baselines_configs/equipment_fasttext_filter.yaml"
           - "--oss_temp_dir"
           - "oss://si002558te8h/dclm/temp_dir_500/"
           - "--source_name"
