--- a/baselines/baselines_configs/gopher_repetition.yaml
+++ b/baselines/baselines_configs/gopher_repetition.yaml
@@ -1,4 +1,4 @@
 - source: cc
   steps:
     - func: massive_web_repetition_filters
-      tokenizer: "fineweb"
+      use_fineweb_implementation: True
