--- a/baselines/baselines_configs/gopher_quality.yaml
+++ b/baselines/baselines_configs/gopher_quality.yaml
@@ -4,10 +4,11 @@
       length_type: word
       min_length: 50
       max_length: 100000
-      ignore_punctuation: True
+	  model: fineweb
     - func: word_length_filter
       min_length: 3
       max_length: 10
+	  model: fineweb
     - func: symbol_ratio_filter
       max_symbol_to_word_ratio: 0.1
     - func: bullet_count_filter
