--- a/baselines/baselines_configs/v1.yaml
+++ b/baselines/baselines_configs/v1.yaml
@@ -2,11 +2,7 @@
 - source: cc
   steps:
     - func: line_removal_modifier
-      store_new_text: True
     - func: fineweb_gopher_repetition_filter
     - func: fineweb_gopher_quality_filter
-      use_whitelist: False
-    - func: line_punct_ratio_filter
-    - func: short_line_ratio_filter
-    - func: char_dup_ratio_filter
-    - func: list_ratio_filter
+      use_whitelist: True
+    - func: fineweb_quality_filter
