--- a/job_model.yaml
+++ b/job_model.yaml
@@ -15,7 +15,7 @@ spec:
         - name: cr-docker-registry
       containers:
       - name: dclm-sci
-        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v4.0
+        image: cr.registry.res.cloud.zhejianglab.com/dataprocess/datarig:v4.3
         resources:
           requests:
             cpu: "13"
@@ -35,11 +35,11 @@ spec:
             value: "6380"			
         args:
           - "--readable_name"
-          - "r2_model_filtered"
+          - "c4_noclean_v0"
           - "--output_dir"
           - "oss://si002558te8h/dclm/output"
           - "--config_path"
-          - "baselines/baselines_configs/fasttext_filter.yaml"
+          - "baselines/baselines_configs/v0.yaml"
           - "--oss_temp_dir"
           - "oss://si002558te8h/dclm/temp_dir_500/"
           - "--source_name"
